--- a/ProyectoColas/src/proyectocolas/formCaja.form
+++ b/ProyectoColas/src/proyectocolas/formCaja.form
@@ -116,7 +116,7 @@
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder title="Ingreso uno a uno">
+            <TitledBorder title="Cliente en Proceso">
               <Border PropertyName="innerBorder" info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
                 <LineBorder thickness="2"/>
               </Border>
